objects/Issue__c.object
<CustomObject>
    <description>Issues are used to track requests or bugs or defects with the system.  Typically they are related to test cases but do not have to be.</description>
    <fields>
        <fullName>Assigned_To__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Assigned To</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Issues</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Closed_Date__c</fullName>
        <description>Date the issue was set to status=closed.</description>
        <inlineHelpText>Date the issue was set to status=closed.</inlineHelpText>
        <label>Closed Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Closed_in_Build__c</fullName>
        <label>Closed in Build</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1.0</fullName>
                </value>
                <value>
                    <fullName>2.0</fullName>
                </value>
                <value>
                    <fullName>3.0</fullName>
                </value>
                <value>
                    <fullName>4.0</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Customer_Success_Manager__c</fullName>
        <formula>Project_Object__r.Customer_Success_Manager__r.FirstName &amp; &quot; &quot; &amp; Project_Object__r.Customer_Success_Manager__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Customer Success Manager</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <description>Detailed description of the issue or defect.</description>
        <inlineHelpText>Enter enough detailed information necessary to recreate the problem</inlineHelpText>
        <label>Description</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Detected_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Detected By</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>Issues</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Detected_Date__c</fullName>
        <label>Detected Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Detected_in_Build__c</fullName>
        <label>Detected in Build</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Concur CRP Config</fullName>
                </value>
                <value>
                    <fullName>SFA Sandbox Post-Refresh</fullName>
                </value>
                <value>
                    <fullName>Phase 1 Production</fullName>
                </value>
                <value>
                    <fullName>SFA Sandbox Pre-Nov Deployment</fullName>
                    <default>true</default>
                    <label>SFA Sandbox Pre-Nov Deployment</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Detected_in_Milestone__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Detected in Milestone</label>
        <referenceTo>pse__Milestone__c</referenceTo>
        <relationshipLabel>Issues Detected or Raised</relationshipLabel>
        <relationshipName>Issues_Raised</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Fixed_in_Milestone__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Fixed in Milestone</label>
        <referenceTo>pse__Milestone__c</referenceTo>
        <relationshipLabel>Issues Fixed</relationshipLabel>
        <relationshipName>Issues_Fixed</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Issue_Type__c</fullName>
        <label>Issue Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Defect</fullName>
                    <default>true</default>
                    <label>Defect</label>
                </value>
                <value>
                    <fullName>Enhancement Request</fullName>
                </value>
                <value>
                    <fullName>Project Issue</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Priority__c</fullName>
        <label>Priority</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Immediate</fullName>
                </value>
                <value>
                    <fullName>High</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
                <value>
                    <fullName>Low</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Process__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Process</label>
        <referenceTo>Process__c</referenceTo>
        <relationshipName>Issues</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Project_Object__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Project</label>
        <referenceTo>pse__Proj__c</referenceTo>
        <relationshipLabel>Issues</relationshipLabel>
        <relationshipName>Issues</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <label>Project</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Concur PSA Implementation</fullName>
                    <default>true</default>
                    <label>Concur PSA Implementation</label>
                </value>
                <value>
                    <fullName>A</fullName>
                </value>
                <value>
                    <fullName>B</fullName>
                </value>
                <value>
                    <fullName>C</fullName>
                </value>
                <value>
                    <fullName>D</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Requirement__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Requirement</label>
        <referenceTo>Requirement__c</referenceTo>
        <relationshipName>Issues</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Resolution_Note__c</fullName>
        <label>Analysis / Resolution Note</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Root_Cause__c</fullName>
        <label>Root Cause</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Unknown</fullName>
                    <default>true</default>
                    <label>Unknown</label>
                </value>
                <value>
                    <fullName>Business Process Gap / Error</fullName>
                </value>
                <value>
                    <fullName>Requirements Error / Misunderstanding</fullName>
                </value>
                <value>
                    <fullName>Design Fault</fullName>
                </value>
                <value>
                    <fullName>Configuration Error</fullName>
                </value>
                <value>
                    <fullName>Implementation Error</fullName>
                </value>
                <value>
                    <fullName>Data Error</fullName>
                </value>
                <value>
                    <fullName>Testing Error</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Severity__c</fullName>
        <label>Severity</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1 - Showstopper</fullName>
                </value>
                <value>
                    <fullName>2 - High</fullName>
                </value>
                <value>
                    <fullName>3 - Medium</fullName>
                    <default>true</default>
                    <label>3 - Medium</label>
                </value>
                <value>
                    <fullName>4 - Cosmetic/Usability</fullName>
                </value>
                <value>
                    <fullName>5 - Enhancement</fullName>
                </value>
                <value>
                    <fullName>GAP</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                    <default>true</default>
                    <label>New</label>
                </value>
                <value>
                    <fullName>Assigned</fullName>
                </value>
                <value>
                    <fullName>Fixed</fullName>
                </value>
                <value>
                    <fullName>Reopen</fullName>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
                <value>
                    <fullName>Duplicate</fullName>
                </value>
                <value>
                    <fullName>As Designed</fullName>
                </value>
                <value>
                    <fullName>Open</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status_is_Open__c</fullName>
        <formula>IF(ISPICKVAL(Status__c,&quot;Closed&quot;), FALSE, TRUE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Status is Open</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Summary__c</fullName>
        <description>Short description of the issue.</description>
        <inlineHelpText>Short description of the issue.</inlineHelpText>
        <label>Summary</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Test_Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The test case associated to this issue.</description>
        <inlineHelpText>The test case associated to this issue.</inlineHelpText>
        <label>Test Case</label>
        <referenceTo>Test_Cases__c</referenceTo>
        <relationshipName>Issues</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Version__c</fullName>
        <defaultValue>1</defaultValue>
        <description>Version of the defect.  Increments by 1 each time status is changed to reopen.</description>
        <label>Version</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Issue</label>
    <nameField>
        <displayFormat>I-{0000}</displayFormat>
        <label>Issue Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Issues</pluralLabel>
    <sharingModel>Read</sharingModel>
    <validationRules>
        <fullName>Cannot_fix_without_resolution_note</fullName>
        <active>true</active>
        <errorConditionFormula>ISPICKVAL(Status__c , &quot;Fixed&quot;) &amp;&amp; ISBLANK( Resolution_Note__c ) &amp;&amp;   NOT(ISPICKVAL(PRIORVALUE(Status__c ), &quot;Fixed&quot;) )</errorConditionFormula>
        <errorDisplayField>Resolution_Note__c</errorDisplayField>
        <errorMessage>Cannot set Issue to &quot;Fixed&quot; without providing Resolution Note</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>New_issue_cant_have_assignee</fullName>
        <active>true</active>
        <errorConditionFormula>ISPICKVAL( Status__c , &quot;New&quot;)  &amp;&amp;  NOT( ISBLANK( Assigned_To__c ) )</errorConditionFormula>
        <errorDisplayField>Status__c</errorDisplayField>
        <errorMessage>A &quot;New&quot; issue cannot have an assignee.  Set it to &quot;Assigned&quot; instead.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Require_Assign_To</fullName>
        <active>true</active>
        <description>If status is anything other than &apos;new&apos; assign to is required.</description>
        <errorConditionFormula>AND( ISBLANK(Assigned_To__c), NOT(ISPICKVAL(Status__c, &quot;New&quot;)))</errorConditionFormula>
        <errorMessage>This Issue must be assigned to someone.</errorMessage>
    </validationRules>
</CustomObject>